gcc/testsuite/gcc.dg/spellcheck-options-20.c
/* { dg-do compile } */
/* { dg-options "-Walloc-size-larger-than" } */
/* { dg-error "unrecognized command line option '-Walloc-size-larger-than'; did you mean '-Walloc-size-larger-than='?"  "" { target *-*-* } 0 } */
